--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       rel="stylesheet"
     />
     <!-- END FONTS -->
-    <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="/styles.css" />
-    <script src="/app.js"></script>
+    <link rel="stylesheet" href="./header.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./app.js"></script>
   </head>
   <body>
     <section class="beauty">
@@ -67,7 +67,7 @@
               </p>
             </div>
             <div class="seo__img">
-              <img src="/img/img-1.jpg" alt="" />
+              <img src="./img/img-1.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -93,50 +93,50 @@
                   </h4>
                   <ul class="standarts__list-1 _mb-8">
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem ipsum dolor sit.</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem, ipsum</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Eum, ipsum!
                       </span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem ipsum dolor sit</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem</span>
                     </li>
                     <li class="standarts__list-elem">
-                      <img src="/img/icon-list-cross.svg" />
+                      <img src="./img/icon-list-cross.svg" />
                       <span>Lorem</span>
                     </li>
                   </ul>
@@ -186,7 +186,7 @@
             <div class="indegrients__more">
               <div class="indegrients__more-title js-more-btn">
                 <div class="indegrients__more-title-text">Подробнее</div>
-                <img src="./img/icon-arrow-down.svg" alt="" />
+                <img src="../img/icon-arrow-down.svg" alt="" />
               </div>
               <div class="indegrients__more-desc js-more-desc">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
@@ -260,7 +260,7 @@
             <div class="formuls__cards">
               <div class="formuls__card">
                 <div class="formuls__card-icon">
-                  <img src="./img/img_1-formuls.svg" alt="" />
+                  <img src="../img/img_1-formuls.svg" alt="" />
                 </div>
                 <h3 class="formuls__card-caption">Lorem, ipsum.</h3>
                 <div class="formuls__card-desc">
@@ -274,7 +274,7 @@
 
               <div class="formuls__card">
                 <div class="formuls__card-icon">
-                  <img src="./img/img_2-formuls.svg" alt="" />
+                  <img src="../img/img_2-formuls.svg" alt="" />
                 </div>
                 <h3 class="formuls__card-caption">No animal testing</h3>
                 <div class="formuls__card-desc">
@@ -325,10 +325,10 @@
 
             <div class="what-is__list">
               <div class="what-is__item">
-                <img src="/img/img-01.jpg" class="what-is__item-img _mb-2" />
+                <img src="./img/img-01.jpg" class="what-is__item-img _mb-2" />
                 <p class="what-is__btn js-more-btn">
                   <span>Lorem</span>
-                  <img src="/img/icon-arrow-down.svg" alt="" />
+                  <img src="./img/icon-arrow-down.svg" alt="" />
                 </p>
                 <div class="what-is-desc js-more-desc">
                   Brand™ Lorem ipsum dolor sit amet consectetur adipisicing
@@ -338,10 +338,10 @@
                 </div>
               </div>
               <div class="what-is__item">
-                <img src="/img/img-02.jpg" class="what-is__item-img _mb-2" />
+                <img src="./img/img-02.jpg" class="what-is__item-img _mb-2" />
                 <p class="what-is__btn js-more-btn">
                   <span>Lorem, ipsum.</span>
-                  <img src="/img/icon-arrow-down.svg" alt="" />
+                  <img src="./img/icon-arrow-down.svg" alt="" />
                 </p>
                 <div class="what-is-desc js-more-desc">
                   BrandName™ Lorem ipsum dolor sit amet consectetur adipisicing
@@ -351,10 +351,10 @@
                 </div>
               </div>
               <div class="what-is__item">
-                <img src="/img/img-03.jpg" class="what-is__item-img _mb-2" />
+                <img src="./img/img-03.jpg" class="what-is__item-img _mb-2" />
                 <p class="what-is__btn js-more-btn">
                   <span>Lorem, ipsum dolor.</span>
-                  <img src="/img/icon-arrow-down.svg" alt="" />
+                  <img src="./img/icon-arrow-down.svg" alt="" />
                 </p>
                 <div class="what-is-desc js-more-desc">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
@@ -378,7 +378,7 @@
             </h2>
             <button class="spy__btn js-more-btn">
               <span>Lorem.</span>
-              <img src="/img/icon-arrow-down.svg" alt="" />
+              <img src="./img/icon-arrow-down.svg" alt="" />
             </button>
             <div class="spy__desc js-more-desc">
               AnotherBrand™ Lorem ipsum dolor sit amet consectetur adipisicing
@@ -400,20 +400,20 @@
                 <picture>
                   <source
                     media="(max-width: 767px)"
-                    srcset="/img/img-mount_tab_mob.jpg"
+                    srcset="./img/img-mount_tab_mob.jpg"
                     sizes=""
                   />
                   <source
                     media="(max-width: 1199px)"
-                    srcset="/img/img-mount_tab_mob.jpg"
+                    srcset="./img/img-mount_tab_mob.jpg"
                     sizes=""
                   />
                   <source
                     media="(max-width: 3000px)"
-                    srcset="/img/img-mount.jpg"
+                    srcset="./img/img-mount.jpg"
                     sizes=""
                   />
-                  <img class="farm__img-img" src="/img/img-mount.jpg" alt="" />
+                  <img class="farm__img-img" src="./img/img-mount.jpg" alt="" />
                 </picture>
               </div>
               <div class="farm__txt">
@@ -445,7 +445,7 @@
             <div class="sertificat__list">
               <div class="sertificat__item">
                 <div class="sertificat__img _mb-4">
-                  <img src="/img/img-rise.png" alt="" />
+                  <img src="./img/img-rise.png" alt="" />
                 </div>
                 <p class="sertificat__txt _mb-1">Lorem, ipsum.</p>
                 <a href="#" class="sertificat__link">Lorem</a>
@@ -453,7 +453,7 @@
 
               <div class="sertificat__item">
                 <div class="sertificat__img _mb-4">
-                  <img src="/img/img-granat.png" alt="" />
+                  <img src="./img/img-granat.png" alt="" />
                 </div>
                 <p class="sertificat__txt _mb-1">Lorem</p>
                 <a href="#" class="sertificat__link">Lorem</a>
@@ -461,7 +461,7 @@
 
               <div class="sertificat__item">
                 <div class="sertificat__img _mb-4">
-                  <img src="/img/img-cherry.png" alt="" />
+                  <img src="./img/img-cherry.png" alt="" />
                 </div>
                 <p class="sertificat__txt _mb-1">Lorem</p>
                 <a href="#" class="sertificat__link">Lorem</a>
@@ -493,20 +493,20 @@
               <picture>
                 <source
                   media="(max-width: 767px)"
-                  srcset="/img/img-bottom_tab_mob.jpg"
+                  srcset="./img/img-bottom_tab_mob.jpg"
                   sizes=""
                 />
                 <source
                   media="(max-width: 1199px)"
-                  srcset="/img/img-bottom_tab_mob.jpg"
+                  srcset="./img/img-bottom_tab_mob.jpg"
                   sizes=""
                 />
                 <source
                   media="(max-width: 3000px)"
-                  srcset="/img/img-bottom.jpg"
+                  srcset="./img/img-bottom.jpg"
                   sizes=""
                 />
-                <img class="seo__img-img" src="/img/img-mount.jpg" alt="" />
+                <img class="seo__img-img" src="./img/img-mount.jpg" alt="" />
               </picture>
             </div>
           </div>
