--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
                 titleText
               </h1>
               <p>
-                Все продукты Brand Skin Nutritio&#8482; строго <br />
-                соответствуют критериям «чистой красоты» <br />
-                и безопасности. Мы используем только те ингредиенты, которые
-                являются эффективными и&nbsp;безопасными и&nbsp;осознанно
-                отказались от применения недопустимых ингредиентов. Наши формулы
-                включают как&nbsp;натуральные ингредиенты, так 
-                и&nbsp;безопасные синтезированные, которые имеют доказанную
-                эффективность.
+                Lorem, ipsum dolor.&#8482; <br />
+                Lorem ipsum dolor sit. <br />
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Possimus eius molestias maxime quia. Dolore ratione ducimus, cum
+                rem maiores voluptate labore est, voluptatum dolorem aliquam
+                repellendus quidem consectetur architecto unde accusamus
+                deleniti ut ipsam, in facilis repellat! Excepturi eos
+                reprehenderit est modi porro neque quo recusandae deserunt,
+                culpa exercitationem autem?
               </p>
             </div>
           </div>
@@ -50,7 +51,7 @@
           <div class="seo">
             <div class="seo__txt">
               <h2 class="title-2 _mb-8">
-                Что означает <br />
+                Lorem, ipsum <br />
                 NameBrand&#8482;»
               </h2>
               <p class="_mb-2">
@@ -77,9 +78,7 @@
         <div class="container">
           <div class="standarts__bg">
             <div class="standarts__wrapper">
-              <h2 class="title-2 _mb-5">
-                Стандарты «чистой красоты» Brand&#8482;
-              </h2>
+              <h2 class="title-2 _mb-5">Lorem, ipsum dolor Brand&#8482;</h2>
               <p class="_mb-11">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
                 cum exercitationem quae eaque ex. Officiis maxime, deserunt
@@ -186,7 +185,7 @@
             <div class="indegrients__more">
               <div class="indegrients__more-title js-more-btn">
                 <div class="indegrients__more-title-text">Подробнее</div>
-                <img src="../img/icon-arrow-down.svg" alt="" />
+                <img src="./img/icon-arrow-down.svg" alt="" />
               </div>
               <div class="indegrients__more-desc js-more-desc">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
