--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="formuls__cards">
               <div class="formuls__card">
                 <div class="formuls__card-icon">
-                  <img src="../img/img_1-formuls.svg" alt="" />
+                  <img src="./img/img_1-formuls.svg" alt="" />
                 </div>
                 <h3 class="formuls__card-caption">Lorem, ipsum.</h3>
                 <div class="formuls__card-desc">
