--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Чистая красота</title>
+    <title>Clean beauty</title>
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -273,7 +273,7 @@
 
               <div class="formuls__card">
                 <div class="formuls__card-icon">
-                  <img src="../img/img_2-formuls.svg" alt="" />
+                  <img src="./img/img_2-formuls.svg" alt="" />
                 </div>
                 <h3 class="formuls__card-caption">No animal testing</h3>
                 <div class="formuls__card-desc">
