--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </h2>
             <div class="indegrients__more">
               <div class="indegrients__more-title js-more-btn">
-                <div class="indegrients__more-title-text">Подробнее</div>
+                <div class="indegrients__more-title-text">Lorem</div>
                 <img src="./img/icon-arrow-down.svg" alt="" />
               </div>
               <div class="indegrients__more-desc js-more-desc">
@@ -376,7 +376,7 @@
               reiciendis esse nulla iusto libero officia.
             </h2>
             <button class="spy__btn js-more-btn">
-              <span>Lorem.</span>
+              <span>Lorem</span>
               <img src="./img/icon-arrow-down.svg" alt="" />
             </button>
             <div class="spy__desc js-more-desc">
@@ -486,7 +486,7 @@
                 atque expedita, at quaerat repudiandae! Corporis fugit voluptate
                 sequi eum.
               </p>
-              <p class="txt_sm">*Lorem.</p>
+              <p class="txt_sm">*Lorem</p>
             </div>
             <div class="seo__img">
               <picture>
